# panda_prosthesis

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
calib/brace_top_setup/: calib_data.BraceTopForceSensor
calib/brace_top_setup_brace/: calib_data.BraceTopForceSensor
convex/: femur-ch.txt  generate.sh  support_femur-ch.txt  support_tibia-ch.txt  tibia-ch.txt
data/: Consignes_robots.csv
data/panda/: brace_mechanical_data.json
data/results/: README.md
data/trajectories/: movement.csv
data/trajectories/bonetag/: Consignes_robotsv2.csv  Validation.csv
data/trajectories/brace/: AP_IE_combined.csv  AP_ML_IE_combined.csv  AP_ML_VV_combined.csv  AP_ML_combined.csv  AP_ML_translation.csv  AP_VV_combined.csv  AP_translation.csv  AP_translation_grosse_translation.csv  All_except_SI_trans.csv  All_rot_all_trans.csv  All_rotation_AP_trans.csv  Flex_ext.csv  Flex_ext_AP_trans_IE_rot.csv  Flex_ext_and_AP_trans.csv  IE_VV_AP_combined.csv  IE_VV_ML_combined.csv  IE_rotation.csv  ML_IE_combined.csv  ML_VV_combined.csv  ML_translation.csv  ML_translation_grosse_translation.csv  SI_20_VV_grand.csv  SI_20_VV_negatif.csv  SI_translation.csv  SI_translation_grosse_translation.csv  Test_kinematic_updated.csv  Trajectory_forces_100N.csv  Trajectory_forces_10N.csv  Trajectory_forces_20N.csv  Trajectory_forces_50N.csv  VV_negatif_initial_SI_13.csv  VV_negatif_initial_SI_15.csv  VV_rotation.csv  VV_rotation_grosse_rotation.csv  all_rot_all_trans_adapted.csv  all_rot_all_trans_adapted3.csv  all_rot_all_trans_complete.csv  all_rot_all_trans_complete_modified.csv  all_translations.csv  complete_modif_SI_moins_5.csv  (+37 more)
data/trajectories/recorded_brace/: default.yaml  doctor1.yaml  doctor2.yaml
doc/: PandaBrace.md  PandaProsthesis.md
inertia/: femur.yml  support_femur.yml  support_tibia.yml  tibia.yml
launch/: display.rviz
meshes/: support_femur.stl  support_tibia.stl  support_tibia_straight.stl
rsdf/panda_femur/: femur.rsdf
rsdf/panda_tibia/: tibia.rsdf
scripts/: run_bonetag_controller_real.in.sh  run_bonetag_controller_simu.in.sh
src/: CMakeLists.txt  module.cpp  module.h
src/bonetag/: BoneTagSerial.cpp  BoneTagSerial.h  BoneTagSerialPlugin.cpp  BoneTagSerialPlugin.h  CMakeLists.txt  test_bonetag_usb.cpp
src/bonetag/etc/: BoneTagSerialPlugin.yaml
src/bonetag/scripts/: reset_bonetag_serial
src/controller/: CMakeLists.txt  PandaBraceController.cpp  PandaBraceController.h  PandaProsthesisController.cpp  PandaProsthesisController.h  controller.cpp  controller.h
src/controller/etc/: .PandaBrace.in.yaml.swo  AtiDaq.in.yaml  AtiDaq.yaml  PandaBrace.in.yaml  PandaProsthesis.in.yaml  PhidgetPressureSensorPlugin.yaml  initial_panda_brace_femur.yaml  initial_panda_femur.yaml  initial_panda_tibia.yaml  initial_pose.yaml  mc_rtc.yaml
src/controller/etc/brace/: initial_brace_bottom_setup.yaml  initial_panda_brace_femur.yaml  initial_panda_femur.yaml  mechanical_data_brace_top_setup.json  mechanical_data_brace_top_setup_brace.json
src/controller/include/: PandaProsthesisImpedanceTask.h  RobotMotion.h  Trajectory.h  TrajectoryLoader.h  TrajectoryPlayer.h  trajectory.h  utils.h
src/controller/src/: PandaProsthesisImpedanceTask.cpp  Trajectory.cpp  TrajectoryPlayer.cpp  trajectory.cpp
src/controller/states/: CMakeLists.txt  Calibrate.cpp  Calibrate.h  CalibrateRelative.cpp  CalibrateRelative.h  Choice.cpp  Choice.h  ChooseMode.cpp  ChooseMode.h  ChooseTrajectory.cpp  ChooseTrajectory.h  GoInContact.cpp  GoInContact.h  GoRelative.cpp  GoRelative.h  Initial.cpp  Initial.h  ManipulateKnee.cpp  ManipulateKnee.h  OffsetCalib.cpp  OffsetCalib.h  PlayTrajectory.cpp  PlayTrajectory.h  RecordTrajectory.cpp  RecordTrajectory.h  RemoveTool.cpp  RemoveTool.h  SaveCalibration.cpp  SaveCalibration.h  TransformDatastore.cpp  TransformDatastore.h
src/controller/states/data/: bonetag.yaml  brace.yml  brace_choice.yaml  choice.yaml  real.yaml  state.yaml
src/module/: CMakeLists.txt  brace_bottom_setup.in.yml  config.h.in  config_panda_brace.h.in  module.cpp  module.h  panda_brace_module.cpp  panda_brace_module.h  panda_prosthesis_aliases.in.yml
src/module/alias/: brace_bottom_setup.in.yaml  brace_top_setup.in.yaml  brace_top_setup_brace.in.yaml  brace_urdf.in.yaml
src/module/etc/ForceSensorCalibration/: panda_brace_femur.yaml
src/module/yaml/: brace_bottom_setup.in.yaml  brace_urdf.in.yaml
transforms/: femur.yml  panda_brace_femur.yml  tibia.yml
